main.tf
provider "aws" {
    region = var.region
  
}

resource "aws_vpc" "my-vpc" {
  cidr_block = var.my_vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name= var.vpc_name
  }
}

resource "aws_subnet" "mysubnet-1" {
  vpc_id = aws_vpc.my-vpc.id
  cidr_block = var.public_cidr_block
  map_public_ip_on_launch = true
  availability_zone = var.public_available_zone
  tags = {
    Name = var.public_subnet_name
  }
}

resource "aws_subnet" "mysubnet-2" {
  vpc_id = aws_vpc.my-vpc.id
  cidr_block = var.private_cidr_block
  availability_zone = var.private_available_zone
  map_public_ip_on_launch = false
  tags = {
    Name = var.private_subnet_name
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my-vpc.id

  tags = {
    Name = var.igw_name
  }
}

resource "aws_default_route_table" "default-tb" {
  default_route_table_id = aws_vpc.my-vpc.default_route_table_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public-assoc" {
  subnet_id = aws_subnet.mysubnet-1.id
  route_table_id = aws_default_route_table.default-tb.id
}

resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "my-ngw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.mysubnet-1.id

  tags = {
    Name = "my-nat"
  }
}

resource "aws_route_table" "NAT-tb" {
  vpc_id = aws_vpc.my-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.my-ngw.id
  }

  tags = {
    Name = "nat-rt"
  }
}

resource "aws_route_table_association" "private-assoc" {
  subnet_id = aws_subnet.mysubnet-2.id
  route_table_id = aws_route_table.NAT-tb.id
  
}

resource "aws_security_group" "my-sg-1" {
  name        = var.security_group_name_1
  description = var.description_sg_1
  vpc_id = aws_vpc.my-vpc.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "my-sg-2" {
  name        = var.security_group_name
  description = var.description_sg
  vpc_id      = aws_vpc.my-vpc.id


  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.my-sg-1.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_db_subnet_group" "my_db_subnet" {
  name = "my-db-subnet-group"

  subnet_ids = [
    aws_subnet.mysubnet-1.id,
    aws_subnet.mysubnet-2.id
  ]

  tags = {
    Name = "db-subnet-group"
  }
}

resource "aws_db_instance" "my_db" {

  identifier = "mariadb-instance"
  allocated_storage = 10
  storage_type      = "gp2"
  engine         = "mariadb"
  engine_version = "10.6"
  instance_class = "db.t4g.micro"
  db_name  = "studentapp"
  username = "shubham"
  password = var.db_password

  db_subnet_group_name   = aws_db_subnet_group.my_db_subnet.name
  vpc_security_group_ids = [aws_security_group.my-sg-2.id]

  publicly_accessible = false
  skip_final_snapshot = true

}

resource "aws_instance" "Ec2Instance" {
    ami           = var.image_instance
    instance_type = var.instance_type
    key_name = var.instance_key
    vpc_security_group_ids = [aws_security_group.my-sg-1.id]
    subnet_id = aws_subnet.mysubnet-1.id
    # user_data = file("userdata.sh")
    user_data = <<-EOF
#!/bin/bash

# Install packages
yum install java-17-amazon-corretto python3 mariadb105 -y

# Download Tomcat
cd /opt
curl -O https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.115/bin/apache-tomcat-9.0.115.tar.gz
tar -xzf apache-tomcat-9.0.115.tar.gz

# Download WAR file
cd /opt/apache-tomcat-9.0.115/webapps/
curl -O https://s3-us-west-2.amazonaws.com/studentapi-cit/student.war

# Download MySQL Connector (UPDATED)
cd /opt/apache-tomcat-9.0.115/lib/
curl -O https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.33/mysql-connector-java-8.0.33.jar
mv mysql-connector-java-8.0.33.jar mysql-connector.jar

# WAIT for DB + TABLE (IMPORTANT FIX)
until mysql -h ${aws_db_instance.my_db.address} -u shubham -p${var.db_password} -e "USE studentapp; SHOW TABLES;" 2>/dev/null; do
  echo "Waiting for DB and tables..."
  sleep 15
done

# Update context.xml
python3 - <<PYTHON
f = open('/opt/apache-tomcat-9.0.115/conf/context.xml', 'r')
lines = f.readlines()
f.close()

resource = '    <Resource name="jdbc/TestDB" auth="Container" type="javax.sql.DataSource" maxTotal="500" maxIdle="30" maxWaitMillis="1000" username="shubham" password="${var.db_password}" driverClassName="com.mysql.cj.jdbc.Driver" url="jdbc:mysql://${aws_db_instance.my_db.address}:3306/studentapp?useSSL=false&allowPublicKeyRetrieval=true"/>\n'

for i, line in enumerate(lines):
    if '</Context>' in line:
        lines.insert(i, resource)
        break

f = open('/opt/apache-tomcat-9.0.115/conf/context.xml', 'w')
f.writelines(lines)
f.close()
PYTHON

# Start Tomcat (ONLY ONCE - FIXED)
cd /opt/apache-tomcat-9.0.115/bin/
./catalina.sh start

EOF
    tags = {
      Name = var.public_instance_name
    }
}

resource "aws_instance" "db-instance" {
    ami           = var.image_instance
    instance_type = var.instance_type
    key_name = var.instance_key
    vpc_security_group_ids = [aws_security_group.my-sg-1.id]
    subnet_id = aws_subnet.mysubnet-2.id
    # user_data = file("userdata_2.sh")
   user_data = <<-EOF
#!/bin/bash

yum update -y
yum install mariadb105 -y

# Wait for RDS
until mysqladmin ping -h ${aws_db_instance.my_db.address} -u shubham -p${var.db_password} --silent; do
  echo "Waiting for RDS..."
  sleep 10
done

# Create DB + Table
mysql -h ${aws_db_instance.my_db.address} -u shubham -p${var.db_password} <<MYSQL
CREATE DATABASE IF NOT EXISTS studentapp;
USE studentapp;

CREATE TABLE IF NOT EXISTS students(
student_id INT NOT NULL AUTO_INCREMENT,
student_name VARCHAR(100) NOT NULL,
student_addr VARCHAR(100) NOT NULL,
student_age VARCHAR(3) NOT NULL,
student_qual VARCHAR(20) NOT NULL,
student_percent VARCHAR(10) NOT NULL,
student_year_passed VARCHAR(10) NOT NULL,
PRIMARY KEY (student_id)
);
MYSQL

EOF
    tags = {
      Name = var.private_instance_name
    }
}
